yaml/purple-whale-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: purple-whale-service
spec:
  type: NodePort
  selector:
    app: purple-whale-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
